fixed jumping title in middle pane creating a new line in details pane title https://github.com/linnovate/root/issues/971

--- a/packages/custom/icu/public/assets/css/_entity-list.scss
+++ b/packages/custom/icu/public/assets/css/_entity-list.scss
@@ -111,12 +111,12 @@
                     }
 
                     &.name {
+                        display: flex;
                         position: relative;
                         white-space: nowrap;
                         cursor: text;
                         flex:1;
                         overflow: hidden;
-                        display: block;
                         line-height: 50px;
                         padding-right: 5px;
                         margin-right: 5px;
